<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/item_name"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_price"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:padding="8dp"
        app:layout_constraintStart_toEndOf="@+id/item_name"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_name"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/hour_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="true"
            android:text="@string/past_1_hour" />

        <com.google.android.material.chip.Chip
            android:id="@+id/day_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/past_1_day" />

        <com.google.android.material.chip.Chip
            android:id="@+id/week_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/past_week" />

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/total_orders"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/no_orders"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_group" />

    <TextView
        android:id="@+id/rank"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:padding="8dp"
        android:text="@string/no_rank_available"
        app:layout_constraintStart_toEndOf="@+id/total_orders"
        app:layout_constraintTop_toBottomOf="@+id/chip_group" />

</androidx.constraintlayout.widget.ConstraintLayout>